fixing small issues